--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 xmlsamples.zip
 xmlsamples/
 xmlsamples*
+
+# ignore extra eclipse nonsense
+MusicScoring/.metadata
+MusicScoring/.metadata/
+MusicScoring/.metadata/*
+MusicScoring/.recommenders
+MusicScoring/.recommenders/
+MusicScoring/.recommenders/*
