Reorganized related work and diagrams under Onward paper. Created new eclipse projects. Updated .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ xmlsamples/
 xmlsamples*
 
 # ignore extra eclipse nonsense
+.metadata
+.metadata/
+.metadata/*
 MusicScoring/.metadata
 MusicScoring/.metadata/
 MusicScoring/.metadata/*
