This closes xwsxethan/MusicScoring#14 by adding support for tied and dotted notes when tracking duration. This is somewhat untested, but believed to work. If problems arise, I will reopen the issue.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ MusicScoring/.metadata/*
 MusicScoring/.recommenders
 MusicScoring/.recommenders/
 MusicScoring/.recommenders/*
+
+# ignore temp files when PowerPoint is open
+Onward\Related Work\~$ScoreAnalysis.pptx
