Fixes xwsxethan/MusicScoring#17
This implements an inversion when the result of (notes/duration) is less
than 1, so the result will always be greater than or equal to 1.

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@ MusicScoring/.recommenders/
 MusicScoring/.recommenders/*
 
 # ignore temp files when PowerPoint is open
-Onward\Related Work\~$ScoreAnalysis.pptx
+Onward/Related\ Work/~$ScoreAnalysis.pptx
