--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ MusicScoring/.recommenders
 MusicScoring/.recommenders/
 MusicScoring/.recommenders/*
 
-# ignore temp files when PowerPoint is open
+# ignore temp files when PowerPoint is open and workout files
 Onward/Related\ Work/~$ScoreAnalysis.pptx
+Onward/Related\ Work/PowerPointWorkout.png
