--- a/MusicScoring/XMLtoScore/.classpath
+++ b/MusicScoring/XMLtoScore/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry including="*" kind="src" path="ConfigFiles"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/user/Dropbox/Public/College/2015-01 Spring/Thesis/MusicScoring/xml-apis.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xml-apis.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
