--- a/MusicScoring/XMLtoScore/bin/.gitignore
+++ b/MusicScoring/XMLtoScore/bin/.gitignore
@@ -1,10 +1,20 @@
 *
+/*
 /Clarinet/
 /DifficultyLevels/
 /DifficultyNodes/
 /Main/
 /MusicalElements/
 /Nodes/
+Utilities
+Utilities/
+Utilities*
+Utilities/*
+/Utilities
 /Utilities/
+/Utilities*
+/Utilities/*
 /Visitors/
 Beginner.xml
+
+!.gitignore
