--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ MusicScoring/XMLtoScore/bin/*
 # ignore temp files when PowerPoint is open and workout files
 "Onward/Related Work/~$ScoreAnalysis.pptx"
 "Onward/Related Work/PowerPointWorkout.png"
+
+# ignore random .DS_Store stuff from OS X
+*DS_Store
