--- a/MusicScoring/XMLtoScore/.classpath
+++ b/MusicScoring/XMLtoScore/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry including="*" kind="src" path="ConfigFiles"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xml-apis.jar"/>
+	<classpathentry kind="lib" path="jars/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
